--- a/environment.yaml
+++ b/environment.yaml
@@ -9,10 +9,10 @@ channels:
   - defaults
 dependencies:
   - python=3.8
-  - pytorch-cuda=11.3
-  - torchvision
   - fvcore
   - iopath
   - nvidiacub
   - pyembree
-  - pip
+  - pip:
+    - torch==1.12.0+cu113
+    - torchvision==0.13.0+cu113
