--- a/environment.yaml
+++ b/environment.yaml
@@ -13,6 +13,4 @@ dependencies:
   - iopath
   - nvidiacub
   - pyembree
-  - pip:
-    - torch==1.12.0+cu113
-    - torchvision==0.13.0+cu113
+  - pip
