--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
--f https://download.pytorch.org/whl/cu113/torch_stable.html
-torch==1.12.0+cu113
-torchvision==0.13.0+cu113
 matplotlib==3.5.0
 Pillow>=9.0.1
+PyYAML
 PyOpenGL
 PyOpenGL_accelerate
-PyYAML>=6.0
 yacs>=0.1.8
 scikit-image==0.19.1
 termcolor
@@ -33,6 +30,5 @@ simple-romp==1.0.4
 protobuf==3.20.0
 open3d
 dataclasses>=0.6
-numpy==1.22.4
-https://download.is.tue.mpg.de/icon/colab/kaolin-0.11.0-cp38-cp38-linux_x86_64.whl
+numpy==1.23.1
 https://download.is.tue.mpg.de/icon/colab/voxelize_cuda-0.0.0-cp38-cp38-linux_x86_64.whl
